[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/controls/centered_panel.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/controls/shiny_button.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/controls/full_screen_panel.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/controls/screens/notification_screen.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/main_font_s.tres" type="DynamicFont" id=5]
[ext_resource path="res://src/controls/nav_bar.tscn" type="PackedScene" id=12]

[node name="NotificationScreen" type="Node2D"]
script = ExtResource( 4 )

[node name="FullScreenPanel" parent="." instance=ExtResource( 3 )]
margin_right = 480.0
margin_bottom = 480.0

[node name="VBoxContainer" type="VBoxContainer" parent="FullScreenPanel"]
margin_right = 480.0
margin_bottom = 612.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NavBar" parent="FullScreenPanel/VBoxContainer" instance=ExtResource( 12 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 480.0
margin_bottom = 128.0
text = "Notification"
shows_back = true
shows_about = false
shows_settings = false
shows_logo = false
shows_game_over = false

[node name="CenteredPanel" parent="FullScreenPanel/VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 132.0
margin_right = 480.0
margin_bottom = 612.0
stretches_horizontally = false
stretches_vertically = true

[node name="ScrollContainer" type="ScrollContainer" parent="FullScreenPanel/VBoxContainer/CenteredPanel"]
margin_right = 480.0
margin_bottom = 480.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer"]
margin_right = 480.0
margin_bottom = 480.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer"]
margin_left = 100.0
margin_top = 162.0
margin_right = 380.0
margin_bottom = 318.0
rect_min_size = Vector2( 280, 0 )

[node name="BodyText" type="Label" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer"]
margin_right = 280.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 5 )
text = "Notification message"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer6" type="Control" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer"]
margin_left = 140.0
margin_top = 27.0
margin_right = 140.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 4
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NotificationLink" type="LinkButton" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer"]
margin_left = 81.0
margin_top = 46.0
margin_right = 199.0
margin_bottom = 69.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 5 )
text = "Notification link"

[node name="Spacer5" type="Control" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer"]
margin_left = 140.0
margin_top = 73.0
margin_right = 140.0
margin_bottom = 88.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 4
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_top = 92.0
margin_right = 240.0
margin_bottom = 132.0
rect_min_size = Vector2( 200, 40 )
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Close"
texture = null

[node name="Spacer4" type="Control" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer"]
margin_left = 140.0
margin_top = 136.0
margin_right = 140.0
margin_bottom = 156.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 4
size_flags_vertical = 3
[connection signal="pressed" from="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/NotificationLink" to="." method="_on_NotificationLink_pressed"]
[connection signal="pressed" from="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
